src/objects/Controls__c.object
<CustomObject>
    <fields>
        <fullName>Action_Category__c</fullName>
        <description>Controls described in a BowTie  Risk analysis should fall into one of thee categories.</description>
        <inlineHelpText>Controls described in a BowTie  Risk analysis should fall into one of these categories. Preventative actions  (including detective) are intended to ensure the risk event does not occur.  Reduction Actions reduce the impact once the event has occurred.</inlineHelpText>
        <label>Action Category</label>
        <picklist>
            <picklistValues>
                <fullName>Preventative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detective</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annualized_Cost__c</fullName>
        <description>Annualized Cost of Acquisition and Maintenance of Control</description>
        <inlineHelpText>Calculate Annual Cost</inlineHelpText>
        <label>Annualized Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessment_Frequency__c</fullName>
        <inlineHelpText>Select the frequency of review of the Control Effectiveness.</inlineHelpText>
        <label>Assessment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semiannually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attestation_Score__c</fullName>
        <label>Attestation Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Control_Description__c</fullName>
        <description>Detailed description of the Control</description>
        <inlineHelpText>Description of Control. Control is anything that is intended to change the Impact or Likelihood of the Risk. Sometimes called a Mitigation.</inlineHelpText>
        <label>Control Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Control_ID__c</fullName>
        <label>Control ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control_Objective_Short_Description__c</fullName>
        <description>Short description but not as short as Control name to enable fit into electronic update tool.</description>
        <inlineHelpText>Limited text field to provide high level description of Control Objective</inlineHelpText>
        <label>Control Objective Short Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control_Objective__c</fullName>
        <description>Objective of Control - the intended effect on Impact or Likelihood</description>
        <inlineHelpText>Describe what the Control is intended to do. Provide sufficient detail so that a reader can fully understand the intended effect.</inlineHelpText>
        <label>Control Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Control_Owner_Email__c</fullName>
        <label>Control Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Control_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person who owns the Control</description>
        <inlineHelpText>Person who has responsibility for ensuring the Control is working as expected</inlineHelpText>
        <label>Control Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Control_Status__c</fullName>
        <description>Status of this control</description>
        <inlineHelpText>Select from available options.</inlineHelpText>
        <label>Control Status</label>
        <picklist>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_since_Last_Assessed__c</fullName>
        <formula>Today() - Last_Assessed__c</formula>
        <label>Days since Last Assessed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_or_Likelihood__c</fullName>
        <description>Select either Impact or Likelihood</description>
        <inlineHelpText>Select what is affected by this Control - Does the Control change the Impact or Likelihood</inlineHelpText>
        <label>Impact or Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likelihood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Assessed__c</fullName>
        <inlineHelpText>Date last assessed</inlineHelpText>
        <label>Last Assessed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Assessed__c</fullName>
        <inlineHelpText>Date when the Control is due to be assessed.</inlineHelpText>
        <label>Next Assessed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Assessment_Date__c</fullName>
        <formula>IF(ISPICKVAL(Assessment_Frequency__c, &quot;Daily&quot;), Last_Assessed__c+1, 

IF(ISPICKVAL(Assessment_Frequency__c, &quot;Weekly&quot;), Last_Assessed__c+7, 

IF(ISPICKVAL(Assessment_Frequency__c, &quot;Monthly&quot;), Last_Assessed__c+ CASE(MONTH(Last_Assessed__c+1),1, 
IF(MOD(Year(Last_Assessed__c),4)=0,CASE(DAY(Last_Assessed__c),29,31,30,30,31,29,31),CASE(DAY(Last_Assessed__c),30,29,31,28,31)), 
2,IF(MOD(Year(Last_Assessed__c),4)=0,29,28),3,31,4,30,5,31,6,30,7,31,8,31,9,30,10,31,11,30,12,31,NULL), 

IF(ISPICKVAL(Assessment_Frequency__c, &quot;Quarterly&quot;), Last_Assessed__c+CASE(MONTH(Last_Assessed__c+1), 1,IF(MOD(Year(Last_Assessed__c+1),4)=0,91,90),2,IF(MOD(Year(Last_Assessed__c+1),4)=0,90,89),3,92,4,91,5,92,6,92,7,92,8,92,9,91,10,92,11, 
IF(MOD(Year(Last_Assessed__c)+1,4)=0,CASE(DAY(Last_Assessed__c),29,92,30,91,92),CASE(DAY(Last_Assessed__c),30,90,92)), 
12,IF(MOD(Year(Last_Assessed__c+1)+1,4)=0,91,90),NULL), 

IF(ISPICKVAL(Assessment_Frequency__c, &quot;Semiannually&quot;), Last_Assessed__c+CASE(MONTH(Last_Assessed__c+1), 1,IF(MOD(Year(Last_Assessed__c+1),4)=0,182,181),2,IF(MOD(Year(Last_Assessed__c+1),4)=0,182,181),3,184,4,183,5,184,6,183,7,184,8, 
IF(MOD(Year(Last_Assessed__c)+1,4)=0,CASE(DAY(Last_Assessed__c),29,184,30,183,31,182,184),CASE(DAY(Last_Assessed__c),30,182,31,183,184)), 
9,IF(MOD(Year(Last_Assessed__c+1)+1,4)=0,182,181),10,IF(MOD(Year(Last_Assessed__c+1)+1,4)=0,183,182),11,IF(MOD(Year(Last_Assessed__c+1)+1,4)=0,182,181),12,IF(MOD(Year(Last_Assessed__c+1)+1,4)=0,183,182),NULL), 

IF(ISPICKVAL(Assessment_Frequency__c, &quot;Annually&quot;), Last_Assessed__c+IF(OR(MONTH(Last_Assessed__c+1)=1,MONTH(Last_Assessed__c+1)=2),IF(MOD(Year(Last_Assessed__c+1),4)=0,366,365),IF(MOD(Year(Last_Assessed__c+1)+1,4)=0,366,365)), 
NULL)))))) 

/* 
1 - 31 
2 - 28/29 
3 - 31 
4 - 30 
5 - 31 
6 - 30 
7 - 31 
8 - 31 
9 - 30 
10 - 31 
11 - 30 
12 - 31 
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objective_Achieved__c</fullName>
        <inlineHelpText>Enter the extent to which the Control Objective has been achieved. Enter a value between 0 and 100% where 0 means the Control is totally ineffective, and 100% indicates the control is completely meeting the control objective</inlineHelpText>
        <label>Objective Achieved</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Control</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Annualized_Cost__c</columns>
        <columns>Impact_or_Likelihood__c</columns>
        <columns>Action_Category__c</columns>
        <columns>Objective_Achieved__c</columns>
        <columns>Last_Assessed__c</columns>
        <columns>Assessment_Frequency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Controls Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Controls</pluralLabel>
    <recordTypes>
        <fullName>Control</fullName>
        <active>true</active>
        <label>Control</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Control</fullName>
        <active>true</active>
        <label>Master Control</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>